--- a/.github/workflows/test-dynamic-matrix.yaml
+++ b/.github/workflows/test-dynamic-matrix.yaml
@@ -26,7 +26,7 @@ jobs:
           | sort \
           | xargs -n1 basename \
           | jq -R -s -c 'split("\n")[:-1]')"
-          echo "projects=${LIST}" >> "${GITHUB_OUTPUT}"
+          echo "projects='${LIST}'" >> "${GITHUB_OUTPUT}"
       - run:
           echo "${{ steps.set-projects.outputs.projects }}"
 
