--- a/.github/workflows/test-dynamic-matrix.yaml
+++ b/.github/workflows/test-dynamic-matrix.yaml
@@ -27,10 +27,8 @@ jobs:
           | sort \
           | xargs -n1 basename \
           | jq -R -s -c 'split("\n")[:-1]')"
-          {
-            echo "PROJECTS=${LIST}" 
-            echo "FIXO='valor fixo'"
-          } >> "${GITHUB_OUTPUT}"
+            echo "PROJECTS=${LIST}" >> "${GITHUB_OUTPUT}"
+            echo "FIXO='valor fixo'" >> "${GITHUB_OUTPUT}"
       - run:
           echo "${{steps.set-projects.outputs.FIXO}}"
           echo "${{steps.set-projects.outputs.PROJECTS}}"
