--- a/.github/workflows/test-dynamic-matrix.yaml
+++ b/.github/workflows/test-dynamic-matrix.yaml
@@ -17,14 +17,14 @@ jobs:
   jobA:
     runs-on: ubuntu-latest
     outputs:
-      valueA: ${{steps.stepA.outputs.valueA}}
-      valueB: ${{steps.stepB.outputs.valueB}}
+      valueA: ${{ steps.stepA.outputs.valueA }}
+      valueB: ${{ steps.stepB.outputs.valueB }}
     steps:
       - uses: actions/checkout@v4
       - id: stepA
         run: |
           valueA="first value"
-          echo "valueA=${valueA}" >> "${GITHUB_OUTPUT}"
+          echo "valueA=${valueA}" >> "$GITHUB_OUTPUT"
           echo "${valueA}"
       - id: stepB
         run: |
@@ -32,17 +32,18 @@ jobs:
           | sort \
           | xargs -n1 basename \
           | jq -R -s -c 'split("\n")[:-1]')"
-          echo "valueB=${valueB}" >> "${GITHUB_OUTPUT}"
+          echo "valueB=${valueB}" >> "$GITHUB_OUTPUT"
           echo "${valueB}"
       - run: |
-          echo "${{steps.stepA.outputs.valueA}}"
-          echo "${{steps.stepB.outputs.valueB}}"
+          echo "${{ steps.stepA.outputs.valueA }}"
+          echo "${{ steps.stepB.outputs.valueB }}"
 
   jobB:
     runs-on: ubuntu-latest
+    needs: jobA
     env:
-      valueA: ${{needs.jobA.outputs.valueA}}
-      valueB: ${{needs.jobA.outputs.valueB}}
+      valueA: ${{ needs.jobA.outputs.valueA }}
+      valueB: ${{ needs.jobA.outputs.valueB }}
     steps:
       - uses: actions/checkout@v4
       - run: |
@@ -51,6 +52,7 @@ jobs:
 
   jobC:
     runs-on: ubuntu-latest
+    needs: jobA
     env:
       valueB: ${{needs.jobA.outputs.valueB}}
     steps:
